# generative-models-journey

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  myst.yml  papers.md  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: test.yml
notebooks/: diffusion-story.ipynb  ebm-story.ipynb  mcmc-story.ipynb
projects/: __init__.py
projects/vqvae-transformer-ts/: README.md  compare_models.py  create_preview_plot.py  run_continuous_pipeline.py  run_pipeline.py  sample.py  train_continuous.py  train_transformer.py  train_vqvae.py  vqvae_transformer-story.ipynb
projects/vqvae-transformer-ts/data/: __init__.py  generate_synthetic.py
projects/vqvae-transformer-ts/models/: __init__.py  continuous_transformer.py  transformer.py  vqvae.py
projects/vqvae-transformer-ts/tests/: __init__.py  test_continuous_transformer.py  test_data.py  test_generation.py  test_transformer.py  test_vqvae.py
projects/vqvae-transformer-ts/utils/: __init__.py  data_processing.py  evaluation.py  generation.py  generation_pipeline.py  plotting.py
projects/vqvae_transformer_ts/: __init__.py  compare_models.py  create_preview_plot.py  generate_long_paths.py  prepare_data_for_evaluation.py  run_continuous_pipeline.py  run_pipeline.py  train_continuous.py  train_transformer.py  train_vqvae.py  visualize_generated_paths.py  vqvae_transformer-story.ipynb
projects/vqvae_transformer_ts/data/: generate_synthetic.py
projects/vqvae_transformer_ts/models/: continuous_transformer.py  vqvae.py
projects/vqvae_transformer_ts/tests/: test_continuous_transformer.py  test_data.py  test_generate_synthetic.py  test_generation.py  test_transformer.py  test_vqvae.py
projects/vqvae_transformer_ts/utils/: evaluation.py  generation_pipeline.py  plotting.py
src/: __init__.py  diagnostics.py  diffusion.py  ebm.py  mcmc.py  plot_style.py  setup_env.py  training.py  utils.py  visualization.py
tests/: test_setup.py
