[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-journey"
version = "0.1.0"
description = "Generative models exploration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "scikit-learn",
    "matplotlib",
    "tqdm",
#    "imageio",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

